# smoking-control

./: guide-linux.md  guide-win_android.md  guide.md  readme.md  todo.txt
api/: Cargo.toml
api/src/: cli.rs  main.rs  models.rs  tests.rs
api/src/services/: mod.rs  query_params.rs  responses.rs
api/src/sql/: mod.rs
api/src/sql/queries/: create_table.sql  create_table_logs.sql  create_table_user_data.sql  create_table_users.sql  get_logs.sql  insert_user_data.sql  logs_count.sql  update_user_data.sql
api/src/static/: about.html  file1.html  registration.html  script.js  style.css
smoking control/: smoking control.sln
smoking control/smoking control/: API.cs  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  smoking control.csproj
smoking control/smoking control/Pages/: AuthPage.xaml  AuthPage.xaml.cs  ErrorPage.xaml  ErrorPage.xaml.cs
smoking control/smoking control/Resources/Fonts/: .gitignore
smoking control/smoking control/Resources/Styles/: Colors.xaml
smoking_control/: .gitignore  smoking control.sln
smoking_control/smoking control/: App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CONSTANTS.cs  Extensions.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  smoking_control.csproj
smoking_control/smoking control/Api/: APIClient.cs  APIModule.cs
smoking_control/smoking control/Models/: User.cs  UserData.cs  UserLog.cs
smoking_control/smoking control/Pages/: AuthPage.xaml  AuthPage.xaml.cs  ErrorPage.xaml  ErrorPage.xaml.cs  LogAddPage.cs  LogsPage.cs  UserDataEditorPage.cs
(+4 files in other folders)
