[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.11.0", features = ["openssl"] }
clap = { version = "4.5.40", features = ["derive"] }
openssl = "0.10.73"
serde = "1.0.219"
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std-native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
